syntax = "proto3";

package cave_talk;

message Movement {
    double speed = 1;
    double turn_rate = 2;
}